--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <header>
-        <a href="/"><img class="avatar" src="img/sean.jpg" alt="">
-        <h1 class="name">Sean McIntyre</h1></a>
-        <p class="titles">Co-founder of <a class="big" href="http://www.ted.com/tedx/events/7037" target="_blank">TEDxSLC</a>. Co-creator of <a>mcconelling.org</a>. Developer, designer, artist. Overly attached <a class="big" href="https://www.facebook.com/murphy.mcintyre.9" target="_blank">dog owner</a>.</p>
+        <a href="/"><img class="avatar loadIn" src="img/sean.jpg" alt="">
+        <h1 class="name loadIn">Sean McIntyre</h1></a>
+        <p class="titles loadIn">Co-founder of <a class="big" href="http://www.ted.com/tedx/events/7037" target="_blank">TEDxSLC</a>. Co-creator of <a>mcconelling.org</a>. Developer, designer, artist. Overly attached <a class="big" href="https://www.facebook.com/murphy.mcintyre.9" target="_blank">dog owner</a>.</p>
     </header>
     <div class="timeWrap">
         <svg id="clock" width="100" height="100">
@@ -22,11 +22,11 @@
         </svg>
         <span id="hour"></span>
     </div>
-    <section class="blurb">
+    <section class="blurb loadIn">
         <p><span class="greeting"></span>Hi! I'm Sean, and I wear many hats. I'm currently focused on honing my skills as a front end developer and a UI/UX & graphic designer.  Aside from that, I'm also fabricating paintings that change color when you walk around them.  They're powered by an <a href="http://www.arduino.cc/" class="big" target="_blank">Arduino</a>.  If you'd like, feel free to say <a class="big" href="mailto:hello@smcntyr.com">hello</a>!  Presently, I'm available for hire.</p>
     </section>
     <footer>
-        <section id="contact">
+        <section id="contact" class="loadIn">
             <h2>Contact</h2>
             <a class="email" href="mailto:hello@smcntyr.com">hello@smcntyr.com</a>
             <ul>
@@ -35,7 +35,7 @@
                 <a href="https://angel.co/seanmcintyre" target="_blank"><li>AngelList</li></a>
             </ul>
         </section>
-        <a class="license" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>
+        <a class="license loadIn" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>
     </footer>
     <div id="nyc"><img src="img/nyc-15.png" alt=""></div>
     <script src="https://use.typekit.net/nxf3enm.js"></script>
