--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sean McIntyre</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Sean McIntyre — Co-founder of TEDxSLC. Artist, designer & writer.  Brooklyn, NY.">
+    <meta name="description" content="Sean McIntyre — Co-founder of TEDxSLC. Developer, designer, artist & writer. Brooklyn, NY.">
     <meta name="author" content="Sean McIntyre">
     <link rel="stylesheet" href="_/app.min.css">
 </head>
@@ -14,7 +14,7 @@
     <header>
         <a href="/"><img class="avatar loadIn" src="img/sean.jpg" alt="">
         <h1 class="name loadIn">Sean McIntyre</h1></a>
-        <p class="titles loadIn">Co-founder of <a class="big" href="http://www.ted.com/tedx/events/7037" target="_blank">TEDxSLC</a>. Co-creator of <a>mcconelling.org</a>. Developer, designer, artist. Overly attached <a class="big" href="https://www.facebook.com/murphy.mcintyre.9" target="_blank">dog owner</a>.</p>
+        <p class="titles loadIn">Co-founder of <a class="big" href="http://www.ted.com/tedx/events/7037" target="_blank">TEDxSLC</a>. Co-creator of <a href="http://mcconnelling.org" target="_blank">mcconelling.org</a>. Developer, designer, artist. Overly attached <a class="big" href="https://www.facebook.com/murphy.mcintyre.9" target="_blank">dog owner</a>.</p>
     </header>
     <div class="timeWrap">
         <svg id="clock" width="100" height="100">
@@ -23,7 +23,7 @@
         <span id="hour"></span>
     </div>
     <section class="blurb loadIn">
-        <p><span class="greeting"></span>Hi! I'm Sean, and I wear many hats. I'm currently focused on honing my skills as a front end developer and a UI/UX & graphic designer.  Aside from that, I'm also fabricating paintings that change color when you walk around them.  They're powered by an <a href="http://www.arduino.cc/" class="big" target="_blank">Arduino</a>.  If you'd like, feel free to say <a class="big" href="mailto:hello@smcntyr.com">hello</a>!  Presently, I'm available for hire.</p>
+        <p><span class="greeting"></span>Hi! I'm Sean, and I wear many hats. I'm currently focused on honing my skills as a front end developer and interaction designer. Aside from that, I'm also fabricating paintings that change color when you walk around them. They're powered by an <a href="http://www.arduino.cc/" class="big" target="_blank">Arduino</a>. If you'd like, feel free to say <a class="big" href="mailto:hello@smcntyr.com">hello</a>! Presently, I'm available for hire.</p>
     </section>
     <footer>
         <section id="contact" class="loadIn">
