needs starter img

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
         <a class="license loadIn" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>
     </footer>
-    <div id="nyc"></div>
+    <div id="nyc"><img src="/img/nyc-15.png" alt=""></div>
     <script src="https://use.typekit.net/nxf3enm.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script src="_/app.min.js"></script>
