--- a/_src/index.html
+++ b/_src/index.html
@@ -39,6 +39,7 @@
     <div id="nyc"><img src="/img/nyc-15.png" alt=""></div>
     <script src="https://use.typekit.net/nxf3enm.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="_/app.min.js"></script>
 </body>
 </html>
