--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <base href="/smcntyr-com/">
+  <base href="/smcntyr.com/">
   <meta charset="utf-8">
   <title>sean mcintyre, designer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,5 +10,5 @@
   <app></app>
   <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
-<script type="text/javascript" src="inline.82a0b601be3b42359e8d.bundle.js"></script><script type="text/javascript" src="main.9b51a3c26282bcf77833.bundle.js"></script></body>
+<script type="text/javascript" src="inline.1ba6badf150b942540df.bundle.js"></script><script type="text/javascript" src="main.e03ac8d1bd97d05fc4c7.bundle.js"></script></body>
 </html>
