--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-  <base href="/">
   <meta charset="utf-8">
-  <title>sean mcintyre, designer</title>
+  <title>Sean McIntyre | UIXD</title>
+  <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app></app>
-  <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
-  <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+  <app-root></app-root>
 </body>
 </html>
