--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,58 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"
+  itemscope
+  itemprop="author"
+  itemtype="http://schema.org/Person">
+
 <head>
   <meta charset="utf-8">
-  <title>Sean McIntyre | UIXD</title>
+  <title>Sean McIntyre | Product Designer, Engineer</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1,  maximum-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/favicon.png">
+  <meta name="theme-color" content="#ffffff">
+
+  <meta name="google-site-verification" content="M7pL_wSxEzCrDuOumMNWbZKW9gUPV88ICHQRWmdyhbc" />
+
+  <meta name="description" content="Sean is a designer and front end engineer from Texas, currently residing in Brooklyn. Her pronouns are she and they." />
+
+  <meta itemprop="name" content="Sean McIntyre | Product Designer, Engineer">
+  <meta itemprop="description" content="Sean is a designer and front end engineer from Texas, currently residing in Brooklyn. Her pronouns are she and they.">
+
+  <meta name="twitter:site" content="@seanmcintyre">
+  <meta name="twitter:creator" content="@seanmcintyre">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Sean McIntyre | Product Designer, Engineer">
+  <meta name="twitter:description" content="Sean is a designer and front end engineer from Texas, currently residing in Brooklyn. Her pronouns are she and they.">
+
+  <meta property="og:title" content="Sean McIntyre | Product Designer, Engineer" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://smcntyr.com/" />
+  <meta property="og:description" content="Sean is a designer and front end engineer from Texas, currently residing in Brooklyn. Her pronouns are she and they." />
+  <meta property="og:site_name" content="Sean McIntyre | Product Designer, Engineerm" />
 </head>
+
 <body>
   <app-root></app-root>
 </body>
 </html>
+
+<!-- Add this code to person page: -->
+     <div itemscope itemprop="author" itemtype="http://schema.org/Person">
+     <meta itemprop="description" content="lol">
+        <meta itemprop="birthDate" content="1989-12-16">
+        <link itemprop="url" href="smcntyr.com" rel="author"/>
+        <a itemprop="url" href="smcntyr.com"><span itemprop="name" style="display:block;"><strong>Sean McIntyre</strong></span></a>
+        <span itemprop="jobtitle" style="display:block;">Product Designer, Engineer</span>
+        <span itemprop="email" style="display:block;">hello@smcntyr.com</span>
+        <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><div><span itemprop="addressLocality" style="display:block;">Brooklyn</span>,
+				<span itemprop="addressRegion"style="display:block;">NY</span>
+				</div><span itemprop="postalCode"style="display:block;">11211</span>
+			<span itemprop="addressCountry"style="display:block;">United States</span>
+			</div>
+		</div>
